@@ -1,3 +1,7 @@
+08 June 2008
+
+* Set socket mode +x if any sessions are attached and -x if not.
+
 07 June 2008
 
 * Make status-interval actually changable.
@@ -456,4 +460,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.116 2008-06-07 06:13:21 nicm Exp $
+$Id: CHANGES,v 1.117 2008-06-08 19:49:04 nicm Exp $
